--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -2,6 +2,10 @@
 <head>
     <title>PlacesToStay</title>
     
+        <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
@@ -33,10 +37,25 @@
         }
         p{
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 16pt;
+            font-size: 14pt;
             padding-left: 5%;
         }
-  
+        #searchBox{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 14pt;
+            padding-top: 2%;
+            padding-left: 5%;
+        }
+        #ptsResults{
+            padding-top: 1%;
+            font-size: 100%;
+            text-align: center;
+        }
+        #mapCss {
+            width: 100%; 
+            height: 600px;
+            display: block;  
+        }
     </style>
 
 </head>
